<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_selanjutnya">Next</string>
    <string name="password_hint">Password</string>
    <string name="gmail_hint">Email</string>
    <string name="masuk">Log in</string>
    <string name="text_ket_1">By entering here, you agree</string>
    <string name="text_ket_1a">By registering here, you agree</string>
    <string name="txt_ket_2"><![CDATA[Terms & Conditions]]></string>
    <string name="txt_ket_3">and</string>
    <string name="txt_ket_5">TokoPhincon</string>
    <string name="txt_ket_4">Privacy Policy</string>
    <string name="daftar">Register</string>
    <string name="txt_option">or register with</string>
    <string name="selesai">Finish</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="whistlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="gabung_sekarang">Join Now</string>
    <string name="lewati">Skip</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="store_urutkan">Sort</string>
    <string name="store_reset">Reset</string>
    <string name="store_filter">Filter</string>
    <string name="store_ulasan">Rating</string>
    <string name="store_penjualan">Sale</string>
    <string name="store_harga_terendah">Lowest</string>
    <string name="store_harga_tertinggi">Highest</string>
    <string name="store_kategori">Category</string>
    <string name="store_apple">Apple</string>
    <string name="store_asus">Asus</string>
    <string name="store_dell">Dell</string>
    <string name="store_lenovo">Lenovo</string>
    <string name="store_harga">Price</string>
    <string name="storeharga_terendah">Lowest Price</string>
    <string name="storeharga_tertinggi">Highest Price</string>
    <string name="store_tampilkan_produk">Show Products</string>
    <string name="nodesc">No description</string>
    <string name="title_product">Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB Windows 11 QHD IPS</string>
    <string name="text_pemilik_toko">ProStoreComputer</string>
    <string name="rating_float">5.00</string>
    <string name="store_ket_terjual">%s Sold</string>
    <string name="msg_empty_error">Your requested data is unavailable</string>
    <string name="reset">Reset</string>
    <string name="harga_product">Rp. %s</string>
    <string name="example_search">Lenovo Legion 7</string>
    <string name="txt_error">500</string>
    <string name="empty_code">Empty</string>
    <string name="label">Label</string>
    <string name="total_pembayaran">Total Payment</string>
    <string name="metode_pembayaran">Payment Method</string>
    <string name="waktu">Time</string>
    <string name="tanggal">Date</string>
    <string name="status">Status</string>
    <string name="id_transaksi">Transaction ID</string>
    <string name="detail_transaksi">Transaction Detail</string>
    <string name="pembayaran_berhasil">Payment Successful</string>
    <string name="beri_ulasan">Give Review</string>
    <string name="sisa">Stock %1$s</string>
    <string name="rp">Rp. %1$s</string>
    <string name="terjual">| Sold %1$s</string>
    <string name="rp_0">Rp.0</string>
    <string name="empty_error">Your requested data is unavailable</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="refresh">Refresh</string>
    <string name="connection">Connection</string>
    <string name="rating_ulasan">%1$s rating . %2$s Reviews</string>
    <string name="pembeli_merasa_puas">%1$s % Satisfied Buyers</string>
    <string name="total_review">4.5 (2)</string>
    <string name="terjual_10">| Sold 10</string>
    <string name="keranjang">+ Cart</string>
    <string name="berhasil">Successful</string>
    <string name="jumlah_barang">0 Items</string>
    <string name="ulas">Review</string>
    <string name="barang">%1$s Items</string>
    <string name="date">June 4, 2021</string>
    <string name="belanja">Shopping</string>
    <string name="review_star">4.5</string>
    <string name="beli_langsung">Buy Now</string>
    <string name="kepuasan">100% Satisfied Buyers</string>
    <string name="tingkat_kepuasan">2 ratings . 2 reviews</string>
    <string name="lihat_semua">View All</string>
    <string name="hapus_semua">Delete All</string>
    <string name="connection_error">Your connection is unavailable</string>
    <string name="beli">Buy</string>
    <string name="pilih_semua">Select All</string>
    <string name="info">Info</string>
    <string name="transaksi_berhasil">Successful Transaction</string>
    <string name="text_description_notif">Your transaction is being processed by the seller, please wait for further updates in the application. While waiting, you can search for other items.</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="keranjang_title">Cart</string>
    <string name="total_bayar">Total Cost</string>
    <string name="items_buyed">Buyed items</string>
    <string name="pembayaran">Payment</string>
    <string name="pilih_pembayaran">Choose Payment Method</string>
    <string name="bayar">Buy</string>
    <string name="stok_tidak_mencukupi">Item out of stock!</string>
    <string name="detail_product">Detail Product</string>
    <string name="product_sudah_ada_di_wishlist">Product already add to Wishlist!</string>
    <string name="product_ditambahkan_pada_wishlist">Product add to Wishlist!</string>
    <string name="pilih_varian">Choose Varian</string>
    <string name="deskripsi_produk">Description Product</string>
    <string name="ulasan_pembeli">User Review</string>
    <string name="terima_kasih">Thank You!</string>
    <string name="product_ditambahkan_pada_keranjang">Product add to cart!</string>
    <string name="product_berhasil_ditambahkan_pada_keranjang">Product successfully add to cart!</string>
    <string name="barang_transaction">%1$s items</string>
    <string name="pilih_method_pembayaran">Choose Payment</string>
    <string name="add">+</string>
    <string name="decree">-</string>
    <string name="ram_produk">16GB, 1TB SSD</string>
    <string name="contoh_email">Example : text@gmail.com</string>
    <string name="minimal_karakter">Minimum 8 character</string>
    <string name="default_notification_channel_id">123</string>
    <string name="default_notification_channel_name">notification</string>
    <string name="sesi_anda_telah_berakhir">Sesi anda telah berakhir</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_tidak_valid">Password tidak valid</string>
    <string name="login_berhasil">Login berhasil!</string>
    <string-array name="options_select_picture_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
</resources>
