<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title_bts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_filter"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_reset_filter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_reset"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_urutkan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/store_urutkan"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_bts"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_urutkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_urutkan">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_ulasan" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_penjualan" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_harga_terendah" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_harga_tertinggi" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_kategori_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/store_kategori"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_urutkan" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_kategori_filter">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_apple" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_asus" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_dell" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_lenovo" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_harga_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_harga"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_kategori"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_input_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_harga_filter"
        app:layout_constraintStart_toStartOf="parent"
        >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_harga_terendah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/storeharga_terendah"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layout_harga_tertinggi"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint.">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_harga_terendah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_harga_tertinggi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/storeharga_tertinggi"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint."
                app:layout_constraintStart_toEndOf="@+id/layout_harga_terendah"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_harga_tertinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_tampilkan_produk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_tampilkan_produk"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_harga"/>

</androidx.constraintlayout.widget.ConstraintLayout>