<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_notification"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:src="@drawable/img_thumbnail_produk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txt_info_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:text="@string/info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_notification"/>

    <TextView
        android:id="@+id/txt_date_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:textSize="12sp"
        android:text="@string/tanggal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt_time_of_notification"/>

    <TextView
        android:id="@+id/txt_time_of_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:text="@string/waktu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_status_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/transaksi_berhasil"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_info_notif"
        app:layout_constraintStart_toEndOf="@id/img_notification"/>
    
    <TextView
        android:id="@+id/txt_desc_notif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/text_description_notif"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_status_info"
        app:layout_constraintStart_toEndOf="@id/img_notification"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>